# markdown-converter

./: .gitignore  .pre-commit-config.yaml  CLI_ANALYSIS.md  Makefile  README.md  pyproject.toml  requirements.txt
.cursor/: context.md  rules.md
.github/: copilot.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/source/: api.rst  cli.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: cli_example.py  convert_example.py  markdown_converter_demo.ipynb  ms_office_conversion_example.py
examples/output/: comprehensive_test.md  simple_test.md
examples/test_documents/: comprehensive_test.html  comprehensive_test.txt  simple_test.html  simple_test.txt
requirements/: base.txt  dev.txt  test.txt
research/: EXISTING_TOOLS_RESEARCH.md  IMPLEMENTATION_PLAN.md  INTEGRATION_STRATEGY.md  PANDOC_IMPROVEMENTS.md  PROJECT_PLAN.md  README.md  REQUIREMENTS.md
scripts/: convert_cli.py  download_sample_documents.py  generate_test_documents.py  verify_pandoc_version.py  verify_test_documents.py
src/markdown_converter/: __init__.py  api.py  cli.py  config.py  logging_system.py
src/markdown_converter/core/: __init__.py  batch_processor.py  converter.py  engine.py  exceptions.py  file_converter.py  filesystem.py  grid_processor.py  utils.py
src/markdown_converter/formatters/: __init__.py  base.py  markdown.py
src/markdown_converter/parsers/: __init__.py  base.py  excel_parser.py  html_parser.py  pandoc_parser.py  pdf_parser.py  word_parser.py
src/markdown_converter/processors/: __init__.py  base.py  image_processor.py  metadata_processor.py  table_processor.py
src/markdown_converter/utils/: __init__.py  document_generator.py
temp_batch_output/: comprehensive_test.md  gpr_paper_test.md  sample_report.md
temp_batch_output_v2/: sample_webpage.md
test_documents/: comprehensive_test.html  comprehensive_test.txt  data_analysis.xlsx  product_catalog.csv  sample_email.msg  sample_report.docx  sample_webpage.html  simple_test.html  simple_test.md  simple_test.txt  technical_spec.txt
test_documents/converted/: comprehensive_test.markdown  simple_test.markdown
tests/integration/: __init__.py
tests/performance/: __init__.py
tests/unit/: test_api.py  test_cli.py  test_cli_extended.py  test_config.py  test_formatters_extended.py  test_parsers_extended.py
